--- a/config/.env.sample
+++ b/config/.env.sample
@@ -1,2 +1,3 @@
-# Get your Google API key from https://makersuite.google.com/app/apikey
-GOOGLE_API_KEY="XXXX" # Replace "XXXX" with your secret Google AI API key
+# Replace "XXXX" with your secret 
+# key from https://makersuite.google.com/app/apikey
+GOOGLE_API_KEY="XXXX" 
